﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 5.2.18
- Added ability to connect to HTTPS sites through proxy with basic
  authentication using stream_context/http/header/Proxy-Authorization (Dmitry)

- Fixed bug #53682 (Fix compile on the VAX). (Rasmus, jklos)
- Fixed bug #53568 (swapped memset arguments in struct initialization).
  (crrodriguez at opensuse dot org)

06 Jan 2010, PHP 5.2.17
- Fixed Bug #53632 (infinite loop with x87 fpu). (CVE-2010-4645) (Scott, 
  Rasmus)

16 Dec 2010, PHP 5.2.16
- Fixed bug #53517 (segfault in pgsql_stmt_execute() when postgres is down).
  (gyp at balabit dot hu)
- Fixed bug #53516 (Regression in open_basedir handling). (Ilia)

09 Dec 2010, PHP 5.2.15
- Fixed extract() to do not overwrite $GLOBALS and $this when using
  EXTR_OVERWRITE. (jorto at redhat dot com)  
- Fixed crash in zip extract method (possible CWE-170). 
  (Maksymilian Arciemowicz, Pierre)
- Fixed a possible double free in imap extension (Identified by Mateusz 
  Kocielski). (CVE-2010-4150). (Ilia)
- Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)
- Fixed possible crash in mssql_fetch_batch(). (Kalle)
- Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
  (CVE-2010-3709). (Maksymilian Arciemowicz)

- Fixed bug #53492 (fix crash if anti-aliasing steps are invalid). (Pierre)
- Fixed bug #53323 (pdo_firebird getAttribute() crash).
  (preeves at ibphoenix dot com)
- Fixed bug #52929 (Segfault in filter_var with FILTER_VALIDATE_EMAIL with
  large amount of data). (CVE-2010-3709). (Adam)
- Fixed bug #52879 (Objects unreferenced in __get, __set, __isset or __unset
  can be freed too early). (mail_ben_schmidt at yahoo dot com dot au, Dmitry)
- Fixed bug #52772 (var_dump() doesn't check for the existence of 
  get_class_name before calling it). (Kalle, Gustavo)